fix homepage gradient on safari

--- a/css/index.styl
+++ b/css/index.styl
@@ -113,7 +113,7 @@ body
 		left: 0
 		width: 100%
 		height: 100%
-		background-image: linear-gradient(180deg, transparent 50%, #f5f7fa 100%)
+		background-image: linear-gradient(180deg, rgba(245, 247, 250, 0) 50%, rgba(245, 247, 250, 1) 100%)
 
 .feature-section
 	background: #4055A8
